tests/paczka1/fuzzy1/60369813.err
Error in line 1: rZAZejBCeo S606 28,76
Error in line 2: CYan768XJtf A237 35,8
Error in line 3: rZAZejBCeo S998 9,7
Error in line 15: 60mg S606 32,3
Error in line 24: 60mg S998 2,2
Error in line 17: rZAZejBCeo A237 402,2
Error in line 32: qyah9 S844 32,3
